[package]
name = "caramel"
version = "0.1.0"
edition = "2024"

[features]
akari = ["dep:lapin", "dep:futures-util", "dep:serde_json"]
log = ["dep:simplelog"]
ns = ["dep:lazy_static", "dep:serde_repr"]
ns-xml = ["ns", "quick-xml/serialize"]
ns-api = ["ns", "dep:regex", "dep:reqwest", "dep:tokio"]
webhook = ["serenity", "url"]

[dependencies]
futures-util = { version = "0.3.31", optional = true }
lapin = { version = "3.7.2", optional = true }
lazy_static = { version = "1.5.0", optional = true }
log = "0.4.28"
quick-xml = { version = "0.38.3", optional = true }
regex = { version = "1.12.2", optional = true }
reqwest = { version = "0.12.24", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", optional = true }
serde_repr = { version = "0.1.20", optional = true }
serenity = { version = "0.12.4", optional = true }
simplelog = { version = "0.12.2", optional = true }
tokio = { version = "1.48.0", optional = true }
url = { version = "2.5.7", optional = true }
